# project-2_Bialkovskii_25-255

./: .gitignore  README.md  pyproject.toml  test.cast
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
